ADD_LIBRARY(i23dSFM_numeric
  numeric.cpp
  numeric.h)
SET_TARGET_PROPERTIES(i23dSFM_numeric PROPERTIES SOVERSION ${I23DSFM_VERSION_MAJOR} VERSION "${I23DSFM_VERSION_MAJOR}.${I23DSFM_VERSION_MINOR}")
SET_PROPERTY(TARGET i23dSFM_numeric PROPERTY FOLDER I23dSFM/I23dSFM)
INSTALL(TARGETS i23dSFM_numeric DESTINATION lib EXPORT i23dSFM-targets)

UNIT_TEST(i23dSFM numeric i23dSFM_numeric)
UNIT_TEST(i23dSFM poly i23dSFM_numeric)
UNIT_TEST(i23dSFM lm i23dSFM_numeric)
