
ADD_LIBRARY(i23dSFM_kvld kvld.cpp kvld.h algorithm.cpp algorithm.h)
SET_TARGET_PROPERTIES(i23dSFM_kvld PROPERTIES SOVERSION ${I23DSFM_VERSION_MAJOR} VERSION "${I23DSFM_VERSION_MAJOR}.${I23DSFM_VERSION_MINOR}")
SET_PROPERTY(TARGET i23dSFM_kvld PROPERTY FOLDER I23dSFM/I23dSFM)
INSTALL(TARGETS i23dSFM_kvld DESTINATION lib EXPORT i23dSFM-targets)
